Fixed hover effect on mobile (community.css)

--- a/community.css
+++ b/community.css
@@ -65,12 +65,6 @@ main {
   transition: 300ms;
 }
 
-.button:hover > .icon {
-  background-color: #333;
-  width: 60%;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.616);
-}
-
 .discord {
   height: 4.4rem;
 }
@@ -116,5 +110,13 @@ main {
 
   .sub-header {
     font-size: 1.3rem;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .button:hover > .icon {
+    background-color: #333;
+    width: 60%;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.616);
   }
 }
